# ex-react

./: .dockerignore  .env.example  .env.production  .env.production.example  .env.staging  .env.test  .gitignore  .npmrc  ARCHITECTURE_VALIDATION_REPORT.md  BUNDLE_OPTIMIZATION_REPORT.md  CLAUDE.md  CLEANUP_OVERENGINEERING.md  CLEAN_CSS_SETUP.md  COLLECTED_DATA_ANALYSIS.md  COMPREHENSIVE_SYSTEM_PRD.md  CRITICAL_SYSTEM_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.microservice  Dockerfile.optimized  Dockerfile.socket  ENVIRONMENT_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_SIGNUP_500_ERROR.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION2_IMPLEMENTATION_SUMMARY.md  NODE_JS_SETUP.md  OPTIMIZATION_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  POSTGRES_SETUP.md  PRD.md  RAG_INTEGRATION_SUMMARY.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DIRECT_SETUP.md  RAILWAY_MANUAL_SETUP.md  README.md  REAL_OPTIMIZATION_RESULTS.md  REFACTORING_GUIDE.md  RENDER_DEPLOYMENT_STEPS.md  (+65 more)
.railway/: config.json
Common/: Result.ts
app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
components/: theme-toggle.tsx
contexts/: theme-context.tsx
data/: oppadu_enhanced_qa.jsonl  oppadu_final_qa.jsonl  oppadu_improved_qa.jsonl  oppadu_test_improved.jsonl  oppadu_test_v5.jsonl
docs/: AI_SYSTEM_MIGRATION_GUIDE.md  AWS_S3_SETUP_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DETAILED_CODING_ROADMAP.md  FINAL_TEST_REPORT.md  HYPERFORMULA_INTEGRATION_REPORT.md  HYPERFORMULA_VALIDATION_REPORT.md  (+9 more)
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+756 files in other folders)
